<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/player_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_list"/>

    <TextView
        android:id="@+id/info"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/leaderboard"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/leaderboard_list"/>

    <ListView
        android:id="@+id/leaderboard_list"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:layout_constraintBottom_toTopOf="@+id/back_to_menu_button"/>

    <Button
        android:id="@+id/play_button"
        android:backgroundTint="@color/black"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="@string/play"
        android:layout_marginTop="220dp"
        app:layout_constraintBottom_toTopOf="@id/leaderboard_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/leaderboard_button"
        android:backgroundTint="@color/black"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:onClick="OnLeaderboardClick"
        android:text="@string/leaderboard"
        app:layout_constraintBottom_toTopOf="@id/exit_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_button" />

    <Button
        android:id="@+id/exit_button"
        android:backgroundTint="@color/black"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/exit"
        android:onClick="onExitClick"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leaderboard_button" />

    <Button
        android:id="@+id/register_button"
        android:visibility="invisible"
        android:backgroundTint="@color/black"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:onClick="OnRegisterClick"
        android:text="@string/register"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/back_to_menu_button"
        android:visibility="invisible"
        android:backgroundTint="@color/black"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:text="@string/back"
        android:onClick="OnBackClick"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_button"/>

    <EditText
        android:id="@+id/create_account"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:maxLength="18"
        android:inputType="text"
        android:gravity="center"
        android:textSize="20sp"
        android:hint="@string/create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/register_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>